[package]
name = "wiki-path"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dyn-fmt = "0.4.3"
jiff = "0.1.23"
preferences = "2.0.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
strum = "0.26.3"
strum_macros = "0.26.4"
